# buyhardware

./: .gitignore  docker-compose.yml
.github/workflows/: actions.yml  cicd_conf.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test_main.py
backend/app/: config.py  main.py  schema.py
backend/app/controller/: authentication.py  contracts.py  hardware.py  hardware_orders.py  orders.py  permissions.py  status_changes.py  users.py
backend/app/model/: __init__.py  client.py  contracts.py  hardware.py  hardware_order.py  hardware_type.py  manager.py  mixins.py  orders.py  role.py  status_changes.py  users.py
backend/app/repository/: auth_repo.py  base_repo.py  client.py  contracts.py  hardware.py  hardware_order.py  hardware_type.py  manager.py  mixins.py  orders.py  status_changes.py  user_role.py  users.py
backend/app/service/: auth_service.py  contract_service.py  shop_service.py  users.py
backend/migrations/versions/: 27a1953753e0_update_table.py  47f34b0167ec_delete_contracts.py  c22ba7270357_update_hardware_order_table.py  c4cfd1b812e0_update_status_changes_table.py  d58f01f038e1_init_table.py
backend/templates/: contract.html
backend/tests/: create_order_service_test.py  loadtest.py  locustfile.py
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: Hardware.js  Hardware.jsx  Navbar-simple.js  Navbar.js  PrintButton.js
frontend/src/form/: Forgot.js  Login.js  Register.js
frontend/src/pages/: Cart.jsx  Contract.js  HardwareDetails.js  Home.js  (+2 more)
