[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ketov Daniil <ketov.daniil123@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlmodel = "^0.0.8"
pydantic = "^1.10.7"
psycopg2 = "^2.9.6"
asyncpg = "^0.27.0"
alembic = "^1.10.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start="app.main:start"
